<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="calculate_your_age_text">Berechne dein</string>
    <string name="inMinutes">In Minuten</string>
    <string name="pickDate">Datum auswählen</string>
    <string name="age">Alter</string>
    <string name="selectedDate">Ausgewähltes Datum</string>
    <string name="selectedDateInMinutes">Ausgewähltes Datum in Minuten</string>
</resources>